fixed spacing and added IG

--- a/dirtydice/stylesheet_dirtydice2.css
+++ b/dirtydice/stylesheet_dirtydice2.css
@@ -363,7 +363,11 @@ p {
 
 }
 
-
+.instagram {
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
+}
 
 @media only screen and (max-width: 700px) {
 
